add sidebar + redux

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -35,6 +35,7 @@
       "@hooks/*": ["./hooks/*"],
       "@views/*": ["./views/*"],
       "@lib/*": ["./lib/*"],
+      "@redux/*": ["./redux/*"],
     }
   },
   "include": ["src"]
