--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
     "vite-tsconfig-paths": "^5.1.3"
   },
