--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "formik": "^2.4.6",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
-    "vite-tsconfig-paths": "^5.1.3"
+    "vite-tsconfig-paths": "^5.1.3",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
